[tool.poetry]
name = "video-editor"
version = "0.1.0"
description = ""
authors = ["georf1 <rh26157@gmail.com>"]
readme = "README.md"
packages = [{include = "video_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
flake8 = "^6.0.0"

[tool.poetry.scripts]
video-editor = "video_editor.script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
